--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -21,28 +21,4 @@ jobs:
         run: go version
 
       - name: Unit test
-        run: |
-          go test -v -cover -count=1 ./... -coverprofile coverage.out -coverpkg ./...
-          go tool cover -func coverage.out -o coverage.out
-
-      - name: Go Coverage Badge
-        uses: tj-actions/coverage-badge-go@v1
-        with:
-          green: 80
-          filename: coverage.out
-
-      - name: Add Coverage Badge
-        uses: stefanzweifel/git-auto-commit-action@v4
-        id: auto-commit-action
-        with:
-          commit_message: Apply Code Coverage Badge
-          skip_fetch: true
-          skip_checkout: true
-          file_pattern: ./README.md
-
-      - name: Push Changes
-        if: steps.auto-commit-action.outputs.changes_detected == 'true'
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ github.token }}
-          branch: ${{ github.ref }}
+        run: go test -v -cover -count=1 ./...
