--- a/.github/workflows/full_test.yml
+++ b/.github/workflows/full_test.yml
@@ -1,7 +1,7 @@
 name: Full Test
-on:
-  pull_request_review:
-    types: [submitted]
+on: 
+  pull_request:
+    types: [synchronize]
 
 env:
   INTEGRATION_TEST_SPREADSHEET_ID: ${{ secrets.INTEGRATION_TEST_SPREADSHEET_ID }}
@@ -15,10 +15,17 @@ jobs:
       matrix:
         go-version: ['1.18.x']
 
-    if: github.event.review.state == 'approved'
+    if: github.event.review.state == 'approved' || github.event.pull_request.user.login == 'edocsss'
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
 
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v3
@@ -40,6 +47,14 @@ jobs:
           green: 80
           filename: coverage.out
 
+      # - name: Commit updated readme
+      #   run: |
+      #     - git config user.name "GitHub Bot"
+      #     - git config user.email "github-actions[bot]@users.noreply.github.com"
+      #     - git add ./README.md
+      #     - git commit -m "CI: Update README with test coverage badge"
+      #     - git push origin 
+
       - name: Add Coverage Badge
         uses: stefanzweifel/git-auto-commit-action@v4
         id: auto-commit-action
@@ -49,9 +64,9 @@ jobs:
           skip_checkout: true
           file_pattern: ./README.md
 
-      - - name: Push Changes
-          if: steps.auto-commit-action.outputs.changes_detected == 'true'
-          uses: ad-m/github-push-action@master
-          with:
-            github_token: ${{ github.token }}
-            branch: ${{ github.ref }}
+      - name: Push Changes
+        if: steps.auto-commit-action.outputs.changes_detected == 'true'
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ github.token }}
+          branch: ${{ github.head_ref }}
