--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.17.x', '1.18.x']
+        go-version: ['1.18.x']
 
     steps:
       - uses: actions/checkout@v3
@@ -21,4 +21,4 @@ jobs:
         run: go version
 
       - name: Unit test
-        run: go test -v ./... -count=1
+        run: go test -v -cover -count=1 ./...
