--- a/.github/workflows/full_test.yml
+++ b/.github/workflows/full_test.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Full Test
         run: |
-          go test -v -count=1 -cover ./... -coverprofile coverage.out -coverpkg ./...
+          make test-with-coverage
           go tool cover -func coverage.out -o coverage.out
 
       - name: Go Coverage Badge
